[package]
name = "authzen"
version.workspace = true
description.workspace = true
edition.workspace = true
authors.workspace = true
build = "../build.rs"

[dependencies]
proc-macro-util.workspace = true
service-util.workspace = true
core = { package = "authzen-core", path = "../core" }
derivative.workspace = true
futures.workspace = true
proc-macros = { package = "authzen-proc-macros", path = "../proc-macros" }

authzen-diesel = { workspace = true, optional = true }
authzen-opa = { workspace = true, optional = true }

[build-dependencies]
rustc_version.workspace = true

[features]
diesel-storage-backend = ["authzen-diesel", "core/diesel-storage-backend"]
diesel-mysql = ["diesel-storage-backend", "core/diesel-mysql", "authzen-diesel/mysql"]
diesel-postgres = ["diesel-storage-backend", "core/diesel-postgres", "authzen-diesel/postgres"]
diesel-bb8 = ["diesel-storage-backend", "authzen-diesel/bb8"]
diesel-deadpool = ["diesel-storage-backend", "authzen-diesel/deadpool"]
diesel-mobc = ["diesel-storage-backend", "authzen-diesel/mobc"]

extra-traits = ["core/extra-traits"]

mongodb-tx-cache = ["core/mongodb-tx-cache"]

opa-decision-maker = ["authzen-opa", "core/opa-decision-maker"]

service-util-axum-05 = ["service-util/axum-05"]
service-util-axum-06 = ["service-util/axum-06"]
service-util-client = ["service-util/client"]
service-util-db = ["service-util/db"]
service-util-graphql = ["service-util/graphql"]
service-util-grpc = ["service-util/grpc"]
service-util-http1 = ["service-util/http1"]
service-util-http2 = ["service-util/http2"]
service-util-log_error = ["service-util/log_error"]
service-util-max-allowed-request-body-size-large = ["service-util/max-allowed-request-body-size-large"]
service-util-max-allowed-request-body-size-medium = ["service-util/max-allowed-request-body-size-medium"]
service-util-max-allowed-request-body-size-small = ["service-util/max-allowed-request-body-size-small"]
service-util-server = ["service-util/server"]
service-util-trace = ["service-util/trace"]
