[package]
name = "authzen"
version = "0.1.0-alpha.1"
description = "A framework for easily integrating authorization into backend services."
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
authzen-data-sources = { path = "../data-sources", version = "0.1.0-alpha.1" }
authzen-opa = { path = "../authz-engines/opa", version = "0.1.0-alpha.1", optional = true }
authzen-core = { path = "../core", version = "0.1.0-alpha.1" }
authzen-proc-macros = { path = "../proc-macros", version = "0.1.0-alpha.1" }
authzen-proc-macro-util = { path = "../proc-macro-util", version = "0.1.0-alpha.1", optional = true }
authzen-service-util = { path = "../service-util", version = "0.1.0-alpha.1", optional = true }
authzen-session = { path = "../session", version = "0.1.0-alpha.1", optional = true }

cfg-if.workspace = true
derivative.workspace = true
futures.workspace = true

dotenv = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
diesel-data-source = ["authzen-data-sources/diesel", "authzen-core/diesel-data-source", "authzen-service-util/diesel"]
diesel-mysql = ["diesel-data-source", "authzen-core/diesel-mysql", "authzen-data-sources/diesel-mysql"]
diesel-postgres = ["diesel-data-source", "authzen-core/diesel-postgres", "authzen-data-sources/diesel-postgres"]
diesel-bb8 = ["diesel-data-source", "authzen-data-sources/diesel-bb8"]
diesel-deadpool = ["diesel-data-source", "authzen-data-sources/diesel-deadpool"]
diesel-mobc = ["diesel-data-source", "authzen-data-sources/diesel-mobc"]

extra-traits = ["authzen-core/extra-traits"]

mongodb-tx-cache = ["authzen-core/mongodb-tx-cache"]

opa-authz-engine = ["authzen-opa", "authzen-core/opa-authz-engine"]

policy-information-point = ["authzen-core/policy-information-point"]
policy-information-point-server = ["authzen-core/policy-information-point-server", "dep:dotenv", "dep:tokio"]

proc-macro-util = ["authzen-proc-macro-util"]

service-util = ["authzen-service-util"]
service-util-axum-05 = ["service-util", "authzen-service-util/axum-05"]
service-util-axum-06 = ["service-util", "authzen-service-util/axum-06"]
service-util-client = ["service-util", "authzen-service-util/client"]
service-util-diesel = ["service-util", "authzen-service-util/diesel"]
service-util-graphql = ["service-util", "authzen-service-util/graphql"]
service-util-grpc = ["service-util", "authzen-service-util/grpc"]
service-util-http1 = ["service-util", "authzen-service-util/http1"]
service-util-http2 = ["service-util", "authzen-service-util/http2"]
service-util-log_error = ["service-util", "authzen-service-util/log_error"]
service-util-max-allowed-request-body-size-large = ["service-util", "authzen-service-util/max-allowed-request-body-size-large"]
service-util-max-allowed-request-body-size-medium = ["service-util", "authzen-service-util/max-allowed-request-body-size-medium"]
service-util-max-allowed-request-body-size-small = ["service-util", "authzen-service-util/max-allowed-request-body-size-small"]
service-util-server = ["service-util", "authzen-service-util/server"]
service-util-trace = ["service-util", "authzen-service-util/trace"]

session = ["authzen-session"]
session-account-session = ["session", "authzen-session/account-session"]
session-axum-core-02 = ["session", "authzen-session/axum-core-02"]
session-axum-core-03 = ["session", "authzen-session/axum-core-03"]
session-redis-backend = ["session", "authzen-session/redis-backend"]

tracing = ["authzen-core/tracing"]
