[package]
name = "authzen-core"
version = "0.1.0-alpha.0"
description = "Core authorization primatives and service integrations used in authzen."
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
authzen-diesel = { workspace = true, version = "0.1.0-alpha.0", optional = true }
authzen-opa = { workspace = true, version = "0.1.0-alpha.0", optional = true }
authzen-proc-macros = { workspace = true, version = "0.1.0-alpha.0" }
authzen-service-util = { workspace = true, version = "0.1.0-alpha.0", optional = true }

async-trait.workspace = true
cfg-if.workspace = true
derivative.workspace = true
derive-getters.workspace = true
derive_more.workspace = true
futures.workspace = true
serde.workspace = true
serde_with.workspace = true
typed-builder.workspace = true

anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true, features = ["headers", "macros"] }
chrono = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
diesel-async = { workspace = true, optional = true }
http = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
log = { workspace = true, optional = true }
mongodb = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_plain = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["auth", "catch-panic", "compression-gzip", "cors", "request-id", "trace", "util"] }
tracing = { workspace = true, optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

[features]
diesel-data-source = ["authzen-diesel", "diesel", "diesel-async", "uuid"]
diesel-mysql = ["diesel-data-source", "diesel/mysql", "diesel-async/mysql", "authzen-diesel/mysql"]
diesel-postgres = ["diesel-data-source", "diesel/postgres", "diesel-async/postgres", "authzen-diesel/postgres"]
extra-traits = ["authzen-service-util"]
mongodb-tx-cache = ["anyhow", "chrono", "log", "mongodb", "authzen-service-util/client", "url"]
opa-authz-engine = ["authzen-opa", "hyper", "serde_json", "authzen-service-util/trace"]
policy-information-point = ["http", "serde_json", "serde_plain", "authzen-service-util/try-join-safe"]
policy-information-point-server = ["axum", "axum/headers", "log", "policy-information-point", "authzen-service-util/axum-06", "authzen-service-util/server", "authzen-service-util/trace", "tower", "tower-http", "uuid"]
sqlx-data-source = ["sqlx", "uuid"]
tracing = ["dep:tracing"]
