[package]
name = "opa-util"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
session-util.workspace = true
core = { path = "core", package = "opa-util-core" }
proc-macros = { path = "proc-macros", package = "opa-util-proc-macros" }

[build-dependencies]
rustc_version.workspace = true

[features]
# db = ["core/db"]
# db-filter = ["core/db-filter"]
mongodb-tx-cache-backend = ["core/mongodb-tx-cache-backend"]
