[package]
name = "authzen-proc-macro-util"
version.workspace = true
authors.workspace = true
edition.workspace = true
build = "../build.rs"

[dependencies]
derivative.workspace = true
derive_more.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, default-features = false, features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"] }

[build-dependencies]
rustc_version.workspace = true
