[package]
name = "authzen-proc-macro-util"
build = "../build.rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
derivative.workspace = true
derive_more.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, default-features = false, features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"] }
