[package]
name = "authzen-proc-macro-util"
version = "0.1.0-alpha.0"
description = """
Proc macro utilities used in the authzen crate.
"""
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
derivative.workspace = true
derive_more.workspace = true
prettyplease.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, default-features = false, features = ["clone-impls", "derive", "extra-traits", "parsing", "printing"] }
