[package]
name = "authzen-proc-macros"
version = "0.1.0-alpha.1"
description = "Proc macros used in authzen."
authors.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version.workspace = true

[dependencies]
authzen-proc-macro-util = { workspace = true, version = "0.1.0-alpha.1" }
authzen-proc-macros-core = { path = "core", version = "0.1.0-alpha.1" }

doc-comment.workspace = true

[lib]
proc-macro = true
